--- a/Models/Models.csproj
+++ b/Models/Models.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="NReco.LambdaParser" Version="1.0.12" />
+  </ItemGroup>
+
 </Project>
